--- a/technical-documentation.html
+++ b/technical-documentation.html
@@ -1,18 +1,46 @@
 <style type="text/css">
+	#navbar {
+		position: fixed;
+		width: 300px;
+		top: 0px;
+		left: 0px;
+	}
+	#main-doc {
+		margin-left: 300px;
+	}
+	#navbar li {
+		list-style: none;
+		position: relative;
+	}
 	header {
 		font-size: 1.8em;
+	}
+	@media only screen and (max-width: 815px) {
+		#navbar {
+			position: absolute;
+			top: 0;
+			margin: 0;
+			width: 100%;
+		}
+		#main-doc {
+			position: relative;
+			margin-top: 300px;
+		}
 	}
 </style>
 <nav id="navbar">
 	<header>Javascript Documentation</header>
 	<ul>
 		<li><a class="nav-link" href="#Introduction">Introduction</a></li>
-		<li><a class="nav-link" href="#What_you_should_already_know">What you should already know</a></li>
+		<li><a class="nav-link" href="#b">b</a></li>
+		<li><a class="nav-link" href="#a">a</a></li>
+		<li><a class="nav-link" href="#c">c</a></li>
+		<li><a class="nav-link" href="#d">d</a></li>
 	</ul>
 </nav>
 <main id="main-doc">
 	<section class="main-section" id="Introduction">
-		<header>İntroduction</header>
+		<header>Introduction</header>
 		<p>JavaScript is a cross-platform, object-oriented scripting language. It is a small and lightweight language. Inside a host environment (for example, a web browser), JavaScript can be connected to the objects of its environment to provide programmatic control over them. </p>
 		<p>JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements such as operators, control structures, and statements. Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example: </p>
 		<code></code>
@@ -20,8 +48,8 @@
 			<li>Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). For example, client-side extensions allow an application to place elements on an HTML form and respond to user events such as mouse clicks, form input, and page navigation. </li>
 			<li>Server-side JavaScript extends the core language by supplying objects relevant to running JavaScript on a server. For example, server-side extensions allow an application to communicate with a database, provide continuity of information from one invocation to another of the application, or perform file manipulations on a server. </li>
 		</ul>
-	<section class="main-section" id="What_you_should_already_know">
-		<header>What you should already know</header>
+	<section class="main-section" id="b">
+		<header>b</header>
 		<p>This guide assumes you have the following basic background:</p>
 		<p></p>
 		<code></code>
@@ -30,18 +58,21 @@
 			<li>Good working knowledge of HyperText Markup Language (HTML).</li>
 			<li>Some programming experience. If you are new to programming, try one of the tutorials linked on the main page about JavaScript.</li>
 		</ul>
-	<section class="main-section">
-		<header>header/topic of section</header>
+	<section class="main-section" id="a">
+		<header>a</header>
+		<p></p>
+		<p></p>
+		<code>
+			function greetMe(yourName) { alert("Hello " + yourName); }
+        greetMe("World");
+		</code>
+	<section class="main-section" id="c">
+		<header>c</header>
 		<p></p>
 		<p></p>
 		<code></code>
-	<section class="main-section">
-		<header>header/topic of section</header>
-		<p></p>
-		<p></p>
-		<code></code>
-	<section class="main-section">
-		<header>header/topic of section</header>
+	<section class="main-section" id="d">
+		<header>d</header>
 		<p></p>
 		<p></p>
 		<code></code>
